--- a/upcoming_march_strategy.html
+++ b/upcoming_march_strategy.html
@@ -87,7 +87,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/cgnOd_WVzto"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/cgnOd_WVzto"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> Ignited Steel: Mech Tactics</strong> <br />
@@ -99,7 +99,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/M5KubosA__M"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/M5KubosA__M"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> Distant Worlds 2</strong> <br />
@@ -111,7 +111,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/DJ-TIwoiWbw"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/DJ-TIwoiWbw"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> Starship Troopers - Terran Command</strong> <br />
