--- a/upcoming_july.html
+++ b/upcoming_july.html
@@ -87,7 +87,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/m4rialMWnHA"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/m4rialMWnHA"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> Our Secret Below</strong> <br />
@@ -99,7 +99,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/t8E3By2NlSo"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/t8E3By2NlSo"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> Before I Forget </strong> <br />
@@ -111,7 +111,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/RcWk08PBe7k"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/RcWk08PBe7k"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> Ghost of Tsushima </strong> <br />
@@ -123,7 +123,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/3HJsqy9IY9A"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/3HJsqy9IY9A"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> Ourea </strong> <br />
@@ -135,7 +135,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/R_EFx7L6wso"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/R_EFx7L6wso"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> Röki </strong> <br />
@@ -147,7 +147,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/vXLmKQTvmWM"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/vXLmKQTvmWM"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> Into A Dream </strong> <br />
@@ -159,7 +159,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/YgBaf3onLWs"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/YgBaf3onLWs"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> Creaks </strong> <br />
