--- a/upcoming_june.html
+++ b/upcoming_june.html
@@ -87,7 +87,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/MyvjmCTd4Kw"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/MyvjmCTd4Kw"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> A Hand With Many Fingers</strong> <br />
@@ -99,7 +99,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/pOAWBCXpo6k"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/pOAWBCXpo6k"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> Beyond Blue</strong> <br />
@@ -111,7 +111,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/7GveLqS4yfQ"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/7GveLqS4yfQ"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> Westmark Manor</strong> <br />
@@ -123,7 +123,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/x72lQ6JvqWE"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/x72lQ6JvqWE"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> Waking</strong> <br />
@@ -135,7 +135,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/II5UsqP2JAk"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/II5UsqP2JAk"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> The Last of Us Part II</strong> <br />
@@ -147,7 +147,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/q6CpdmcqS0w"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/q6CpdmcqS0w"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> The Innsmouth Case</strong> <br />
@@ -159,7 +159,7 @@
                                 </div><!-- end pp -->
 
                                 <div class="single-post-media">
-                                  <iframe width="825" height="460" src="http://www.youtube.com/embed/M2TwGoTKR-0"></iframe>
+                                  <iframe width="825" height="460" src="https://www.youtube.com/embed/M2TwGoTKR-0"></iframe>
                                 </div><!-- end media -->
                                 <div class="pp">
                                     <p><center><strong> The Almost Gone</strong> <br />
