--- a/footer.html
+++ b/footer.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <br>
-                <div class="copyright">&copy; 2020 Alireza Mahzoon All Rights Reserved.</div>
+                <div class="copyright">&copy; 2022 Game Critic All Rights Reserved.</div>
             </div>
         </div>
     </div><!-- end container -->
