--- a/header.html
+++ b/header.html
@@ -25,7 +25,7 @@
                     </ul>
                     <ul class="navbar-nav mr-2">
                         <li class="nav-item">
-                            <a class="nav-link" href="https://twitter.com/AdventureCriti1"><i class="fa fa-twitter"></i></a>
+                            <a class="nav-link" href="https://twitter.com/GameCritic_1"><i class="fa fa-twitter"></i></a>
                         </li>
                     </ul>
                 </div>
