--- a/young_souls_review.html
+++ b/young_souls_review.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Site Metas -->
-    <title>Deliver Us the Moon Review - Game Critic</title>
+    <title>Young Souls Review - Game Critic</title>
     <meta name="keywords" content="review, game, gamecritic">
     <meta name="description" content="Young Souls, with its beautiful artistic design, is a must-play game for the fans of the beat'em up and RPG genre.">
     <meta name="author" content="Alireza Mahzoon">
