new version launch

--- a/footer.html
+++ b/footer.html
@@ -5,9 +5,9 @@
                 <div class="widget">
                     <div class="footer-text text-left">
                         <a href="index.html"><img src="images/version/tech-logo.png" alt="" class="img-fluid"></a>
-                        <p>Game Critic delivers a comprehensive video games coverage including news, reviews, previews, and walkthroughs.</p>
+                        <p>Game Critic focus is mainly on indie games. We try our best to introduce these games in form of reviews, previews, and hand-ons.</p>
                         <div class="social">
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>
+                            <a href="https://twitter.com/GameCritic_1" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>
                         </div>
 
                         <hr class="invis">
@@ -20,7 +20,6 @@
                     <h2 class="widget-title">Categories</h2>
                     <div class="link-widget">
                         <ul>
-                            <li><a href="news.html">News</a></li>
                             <li><a href="reviews.html">Reviews </a></li>
                             <li><a href="previews.html">Previews </a></li>
                         </ul>
@@ -43,7 +42,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <br>
-                <div class="copyright">&copy; 2022 Game Critic All Rights Reserved.</div>
+                <div class="copyright">&copy; 2023 Game Critic All Rights Reserved.</div>
             </div>
         </div>
     </div><!-- end container -->
