--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ $("#sidebar").load("sidebar.html");
 <div class="blog-meta">
 <span class="bg-blue"><a href="reviews.html" title="">Reviews</a></span>
 <h4><a href="skabma_review.html" title="">Skábma - Snowfall Review</a></h4>
-<small>01 May, 2022</a></small>
+<small>01 September, 2023</a></small>
 <small>by Alireza</a></small>
 
         </div><!-- end meta -->
@@ -87,13 +87,13 @@ $("#sidebar").load("sidebar.html");
         </div><!-- end post-media -->
         </div><!-- end second-side -->
         <div class="second-slot"><div class="masonry-box post-media">
-<img src="upload/tunic/tunic_394_449.jpg" alt="" class="img-fluid">
+<img src="upload/sep_11_17.png" alt="" class="img-fluid">
 <div class="shadoweffect">
 <div class="shadow-desc">
 <div class="blog-meta">
-<span class="bg-blue"><a href="reviews.html" title="">Reviews</a></span>
-<h4><a href="tunic_review.html" title="">TUNIC Review</a></h4>
-<small>25 April, 2022</a></small>
+<span class="bg-orange"><a href="index.html" title="">Upcomming</a></span>
+<h4><a href="upcoming_september_11_17.html" title="">Upcoming Games - Sep. 11 to 17</a></h4>
+<small>03 September, 2023</a></small>
 <small>by Alireza</a></small>
 
         </div><!-- end meta -->
@@ -102,13 +102,13 @@ $("#sidebar").load("sidebar.html");
         </div><!-- end post-media -->
         </div><!-- end second-side -->
         <div class="second-slot"><div class="masonry-box post-media">
-<img src="upload/a_memoir_blue/a_memoir_blue_394_449.jpg" alt="" class="img-fluid">
+<img src="upload/sep_4_10.png" alt="" class="img-fluid">
 <div class="shadoweffect">
 <div class="shadow-desc">
 <div class="blog-meta">
-<span class="bg-blue"><a href="reviews.html" title="">Reviews</a></span>
-<h4><a href="a_memoir_blue_review.html" title="">A Memoir Blue Review</a></h4>
-<small>03 April, 2022</a></small>
+<span class="bg-orange"><a href="index.html" title="">Upcomming</a></span>
+<h4><a href="upcoming_september_4_10.html" title="">Upcoming Games - Sep. 4 to 10</a></h4>
+<small>03 September, 2023</a></small>
 <small>by Alireza</a></small>
 
         </div><!-- end meta -->
@@ -148,7 +148,7 @@ $("#sidebar").load("sidebar.html");
 <h4><a href="skabma_review.html" title="">Skábma - Snowfall Review</a></h4>
 <p>Skábma - Snowfall has a great idea to introduce the unknown culture and mythologies of the Sámi people...</p>
 <small class="firstsmall"><a class="bg-blue" href="reviews.html" title="">Reviews</a></small>
-<small>01 May, 2022</a></small>
+<small>01 September, 2023</a></small>
 <small>by Alireza</a></small>
 <span class="rating">
 <i class="fa fa-star"></i>
